rail data collector system tests